--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <meta property="og:url" content="https://udraw.me" />
         <meta property="og:description" 
               content="Draw in real time with others on an unlimited sized canvas" />
-        <meta property="og:image" content="https://udraw.me/static/og-image.png" />
-        <meta property="og:image:secure_url" content="http://udraw.me/static/og-image.png" />
+        <meta property="og:image" content="https://udraw.me/static/images/og-image.png" />
+        <meta property="og:image:secure_url" content="https://udraw.me/static/images/og-image.png" />
         <meta name="description" content="Draw in real time with others on an unlimited sized canvas">
 
         <link rel="stylesheet" href="/static/css/ionicons.css" media="all" />
