--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <meta property="og:image" content="https://udraw.me/static/images/og-image.png" />
         <meta property="og:image:secure_url" content="https://udraw.me/static/images/og-image.png" />
         <meta name="description" content="Draw in real time with others on an unlimited sized canvas">
-
         <link rel="stylesheet" href="/static/css/ionicons.css" media="all" />
         <link rel="stylesheet" href="/static/css/style.css" media="all" />
     </head>
@@ -40,10 +39,26 @@
             <p>Size: <input class="size-range" type="range" max="20" min="1" step="1" value="1" /></p>
         </script>
 
-        <script type="text/javascript" src="/static/js/libs/jquery.js"></script>
-        <script type="text/javascript" src="/static/js/libs/underscore.js"></script>
-        <script type="text/javascript" src="/static/js/libs/backbone.js"></script>
-        <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.7/socket.io.min.js"></script>
         <script type="text/javascript" src="/static/js/canvaspaint.js"></script>
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+            ga('create', 'UA-44811907-2', 'auto');
+            ga('send', 'pageview');
+        </script>
     </body>
 </html>
