--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <img id="dummyImage" src="" alt="" />
 
         <script id="sidebar-template" type="text/template">
-            <div class="tool draw-tool active" data-name ='line' title="Draw a line!"><i class="icon ion-edit"></i></div>
-            <div class="tool paint-tool" data-name ='brush' title="Paintbrush!"><i class="icon ion-paintbrush"></i></div>
+            <div class="tool draw-tool active" data-name ='line' title="Messed up line tool!"><i class="icon ion-edit"></i></div>
+            <div class="tool paint-tool" data-name ='brush' title="Wrecked Paintbrush!"><i class="icon ion-paintbrush"></i></div>
             <div class="tool move-tool" data-name ='move' title="Move around the canvas not yet :(!"><i class="icon ion-arrow-move"></i></div>
             <div class="tool region-tool" data-name ='region' title="???!"><i class="icon ion-ios-world"></i></div>
-            <div class="tool eraser-tool" data-name ='eraser' title="Erase!"><i class="icon ion-bookmark"></i></div>
+            <div class="tool eraser-tool" data-name ='eraser' title="Dodgy Eraser!"><i class="icon ion-bookmark"></i></div>
             <div class="colourpicker">
             <input type="color" value="#4480c2" />
             </div>
@@ -57,7 +57,7 @@
         <script id="brush-tools-template" type="text/template">
             <h2>Brush Tools</h2>
             <p>Opacity: <input class="opacity-range" type="range" max="1" min="0.01" step="0.01" value="0.8" /></p>
-            <p>Size: <input class="size-range" type="range" max="20" min="1" step="1" value="1" /></p>
+            <p>Size: <input class="size-range" type="range" max="30" min="1" step="1" value="1" /></p>
         </script>
 
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -66,20 +66,20 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.7/socket.io.min.js"></script>
         <script type="text/javascript" src="/static/js/canvaspaint.js"></script>
         <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+(function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-44811907-2', 'auto');
-            ga('send', 'pageview');
+ga('create', 'UA-44811907-2', 'auto');
+ga('send', 'pageview');
         </script>
     </body>
 </html>
