--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <script id="sidebar-template" type="text/template">
             <div class="tool draw-tool active" data-name ='line' title="Messed up line tool!"><i class="icon ion-edit"></i></div>
             <div class="tool paint-tool" data-name ='brush' title="Wrecked Paintbrush!"><i class="icon ion-paintbrush"></i></div>
-            <div class="tool move-tool" data-name ='move' title="Move around the canvas not yet :(!"><i class="icon ion-arrow-move"></i></div>
+            <div class="tool move-tool" data-name ='move' title="Mighty move tool!"><i class="icon ion-arrow-move"></i></div>
             <div class="tool region-tool" data-name ='region' title="???!"><i class="icon ion-ios-world"></i></div>
             <div class="tool eraser-tool" data-name ='eraser' title="Dodgy Eraser!"><i class="icon ion-bookmark"></i></div>
             <div class="colourpicker">
@@ -67,20 +67,20 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.7/socket.io.min.js"></script>
         <script type="text/javascript" src="/static/js/canvaspaint.js"></script>
         <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+(function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-44811907-2', 'auto');
-            ga('send', 'pageview');
+ga('create', 'UA-44811907-2', 'auto');
+ga('send', 'pageview');
         </script>
     </body>
 </html>
