added some retina support sort of.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>udraw: Unlimited Multiplayer Drawing</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta property="og:title" content="udraw: Multiplayer Drawing" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://udraw.me" />
