--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <meta property="og:image:secure_url" content="https://udraw.me/static/images/og-image.png" />
         <meta name="description" content="Draw in real time with others on an unlimited sized canvas">
         <link rel="stylesheet" href="/static/css/ionicons.css" media="all" />
+        <link rel="stylesheet" href="/static/css/pnotify.brighttheme.css" media="all" />
         <link rel="stylesheet" href="/static/css/style.css" media="all" />
         <link rel="apple-touch-icon" sizes="57x57" href="/static/images/favicons/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/static/images/favicons/apple-touch-icon-60x60.png">
@@ -64,6 +65,10 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.7/socket.io.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pnotify/2.1.0/pnotify.core.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pnotify/2.1.0/pnotify.mobile.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pnotify/2.1.0/pnotify.nonblock.min.js"></script>
+        
         <script type="text/javascript" src="/static/js/canvaspaint.js"></script>
         <script>
 (function (i, s, o, g, r, a, m) {
