resize on window size change. iphone fullscreen

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <meta property="og:image" content="https://udraw.me/static/images/og-image.png" />
         <meta property="og:image:secure_url" content="https://udraw.me/static/images/og-image.png" />
         <meta name="description" content="Draw in real time with others on an unlimited sized canvas">
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="mobile-web-app-capable" content="yes" />
         <link rel="stylesheet" href="/static/css/ionicons.css" media="all" />
         <link rel="stylesheet" href="/static/css/pnotify.brighttheme.css" media="all" />
         <link rel="stylesheet" href="/static/css/style.css" media="all" />
