paper background. Using spectrum color picker.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <link rel="stylesheet" href="/static/css/ionicons.css" media="all" />
+        <link rel="stylesheet" href="/static/css/spectrum.css" media="all" />
         <link rel="stylesheet" href="/static/css/pnotify.brighttheme.css" media="all" />
         <link rel="stylesheet" href="/static/css/style.css" media="all" />
         <link rel="apple-touch-icon" sizes="57x57" href="/static/images/favicons/apple-touch-icon-57x57.png">
@@ -50,7 +51,7 @@
             <div class="tool move-tool" data-name ='move' title="Mighty move tool!"><i class="icon ion-arrow-move"></i></div>
             <div class="tool eraser-tool" data-name ='eraser' title="Dodgy Eraser!"><i class="icon ion-bookmark"></i></div>
             <div class="colourpicker">
-            <input type="color" value="#4480c2" />
+            <input id="spectrumcolor" type="color" value="#222222" />
             </div>
             <div class="panel-tool brush-tools" title="Brush Tools!"><i class="icon ion-ios-settings-strong"></i></div>
             <div class="panel-tool fullscreen" title="Full Screen!"><i class="icon ion-arrow-expand"></i></div>
@@ -70,7 +71,7 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pnotify/2.1.0/pnotify.core.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pnotify/2.1.0/pnotify.mobile.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pnotify/2.1.0/pnotify.nonblock.min.js"></script>
-        
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/spectrum/1.7.1/spectrum.min.js"></script>
         <script type="text/javascript" src="/static/js/canvaspaint.js"></script>
         <script>
 (function (i, s, o, g, r, a, m) {
