added fastclick, sidebar UI changes

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pnotify/2.1.0/pnotify.mobile.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pnotify/2.1.0/pnotify.nonblock.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/spectrum/1.7.1/spectrum.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
         <script type="text/javascript" src="/static/js/canvaspaint.js"></script>
         <script>
 (function (i, s, o, g, r, a, m) {
