--- a/index.html
+++ b/index.html
@@ -56,12 +56,20 @@
             <div class="colorbutton"><i class="icon ion-ios-circle-filled"></i></div>
             <div class="panel-tool brush-tools" title="Brush Tools!"><i class="icon ion-ios-settings-strong"></i></div>
             <div class="panel-tool fullscreen" title="Full Screen!"><i class="icon ion-arrow-expand"></i></div>
+            <div class="panel-tool status-info" title="Status"><i class="icon ion-ios-information-outline"></i></div> 
             <div id="offset-label" title="offset!">0,0</div>
         </script>
 
         <script id="brush-tools-template" type="text/template">
             <p>Size: <input class="size-range" type="range" max="60" min="1" step="1" value="4" /></p>
             <p>Opacity: <input class="opacity-range" type="range" max="1" min="0.01" step="0.005" value="1.0" /></p>
+        </script>
+
+        <script id="status-template" type="text/template">
+            <p>Latency <span id="latency-label">∞<span></p>
+            <h4>Users</h4>
+            <ul class="users"></ul>
+            <h5>udraw by <a href="http://timatooth.com" target="_blank">Tim Sullivan</h5>
         </script>
 
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
