made move tool always there

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         <canvas id="paper" width="640" height="640"></canvas>
 
         <script id="sidebar-template" type="text/template">
-            <div class="tool tool-button draw-tool active" data-name ='line' title="Tools!"><i class="icon ion-edit"></i></div>
+            <div class="tool tool-button draw-tool" data-name ='line' title="Tools!"><i class="icon ion-edit"></i></div>
+            <div class="move-tool active" data-name ='move' title="Mighty move tool!"><i class="icon ion-arrow-move"></i></div>
             <div class="tool-rack hidden">
                 <div class="tool line-tool" data-name ='line' title="Tools!"><i class="icon ion-edit"></i></div>
                 <div class="tool brush-tool" data-name ='brush' title="Wrecked Paintbrush!"><i class="icon ion-paintbrush"></i></div>
-                <div class="tool move-tool" data-name ='move' title="Mighty move tool!"><i class="icon ion-arrow-move"></i></div>
                 <div class="tool eraser-tool" data-name ='eraser' title="Dodgy Eraser!"><i class="icon ion-bookmark"></i></div>
             </div>
             
