changed redis structure. tile protection #bigdata

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <div class="tool line-tool" data-name ='line' title="Tools!"><i class="icon ion-edit"></i></div>
                 <div class="tool brush-tool" data-name ='brush' title="Wrecked Paintbrush!"><i class="icon ion-paintbrush"></i></div>
                 <div class="tool eraser-tool" data-name ='eraser' title="Dodgy Eraser!"><i class="icon ion-bookmark"></i></div>
+                <div class="tool wand-tool" data-name ='wand' title="Tim's wand!"><i class="icon ion-ios-color-wand"></i></div>
             </div>
             
             <div class="colorbutton"><i class="icon ion-ios-circle-filled"></i></div>
