fixed keycodes and button, color selection

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
         <canvas id="paper" width="640" height="640"></canvas>
 
         <script id="sidebar-template" type="text/template">
-            <div class="tool tool-button draw-tool" data-name ='line' title="Tools!"><i class="icon ion-edit"></i></div>
+            <div class="tool tool-button line-tool" data-name ='line' title="Tools!"><i class="icon ion-edit"></i></div>
             <div class="move-tool active" data-name ='move' title="Mighty move tool!"><i class="icon ion-arrow-move"></i></div>
             <div class="tool-rack hidden">
                 <div class="tool line-tool" data-name ='line' title="Tools!"><i class="icon ion-edit"></i></div>
                 <div class="tool brush-tool" data-name ='brush' title="Wrecked Paintbrush!"><i class="icon ion-paintbrush"></i></div>
                 <div class="tool eraser-tool" data-name ='eraser' title="Dodgy Eraser!"><i class="icon ion-bookmark"></i></div>
-                <div class="tool wand-tool" data-name ='wand' title="Tim's wand!"><i class="icon ion-ios-color-wand"></i></div>
+                <div class="tool wand-tool" data-name ='wand' title="Magic Wand!"><i class="icon ion-ios-color-wand"></i></div>
             </div>
             
-            <div class="colorbutton"><i class="icon ion-ios-circle-filled"></i></div>
+            <div id="colorbutton"><i class="icon ion-ios-circle-filled"></i></div>
             <div class="panel-tool brush-tools" title="Brush Tools!"><i class="icon ion-ios-settings-strong"></i></div>
             <div class="panel-tool fullscreen" title="Full Screen!"><i class="icon ion-arrow-expand"></i></div>
             <div class="panel-tool status-info" title="Status"><i class="icon ion-ios-information-outline"></i></div> 
