Added eyedropper tool & hex color input

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <div class="tool brush-tool" data-name ='brush' title="Wrecked Paintbrush!"><i class="icon ion-paintbrush"></i></div>
                 <div class="tool eraser-tool" data-name ='eraser' title="Dodgy Eraser!"><i class="icon ion-bookmark"></i></div>
                 <div class="tool wand-tool" data-name ='wand' title="Magic Wand!"><i class="icon ion-ios-color-wand"></i></div>
+                <div class="tool eyedropper-tool" data-name ='eyedropper' title="Color Picking Spoon!"><i class="icon ion-spoon"></i></div>
             </div>
             
             <div id="colorbutton"><i class="icon ion-ios-circle-filled"></i></div>
@@ -70,7 +71,7 @@
             <p>Latency <span id="latency-label">∞<span></p>
             <h4>Users</h4>
             <ul class="users"></ul>
-            <h5>udraw by <a href="http://timatooth.com" target="_blank">Tim Sullivan</h5>
+            <h5>udraw by <a href="http://timatooth.com" target="_blank"Tim></h5>
         </script>
 
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
