Changed references to window.innerWidth/Height for iframes. Fix loading slider values from localStorage

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p>Latency <span id="latency-label">∞<span></p>
             <h4>Users</h4>
             <ul class="users"></ul>
-            <h5>udraw by <a href="http://timatooth.com" target="_blank"Tim></h5>
+            <h5>udraw by <a href="http://timatooth.com" target="_blank">Tim Sullivan</h5>
         </script>
 
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
