Added 'spray can' tool.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <div class="tool-rack hidden">
                 <div class="tool line-tool" data-name ='line' title="Tools!"><i class="fa fa-pencil"></i></div>
                 <div class="tool brush-tool" data-name ='brush' title="Wrecked Paintbrush!"><i class="fa fa-paint-brush"></i></div>
+                <div class="tool spray-tool" data-name ='spray' title="Filthy Spraycan!"><i class="fa fa-certificate"></i></div>
                 <div class="tool eraser-tool" data-name ='eraser' title="Dodgy Eraser!"><i class="fa fa-eraser"></i></div>
                 <div class="tool eyedropper-tool" data-name ='eyedropper' title="Color Picker!"><i class="fa fa-eyedropper"></i></div>
             </div>
