Using Webpack for JavaScript bundling
Not using loaders. Still need hotloading

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="udraw: Multiplayer Drawing" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://udraw.me" />
-        <meta property="og:description" 
+        <meta property="og:description"
               content="Draw in real time with others on an unlimited sized canvas" />
         <meta property="og:image" content="https://udraw.me/static/images/og-image.png" />
         <meta property="og:image:secure_url" content="https://udraw.me/static/images/og-image.png" />
@@ -55,11 +55,11 @@
                 <div class="tool eraser-tool" data-name ='eraser' title="Dodgy Eraser!"><i class="fa fa-eraser"></i></div>
                 <div class="tool eyedropper-tool" data-name ='eyedropper' title="Color Picker!"><i class="fa fa-eyedropper"></i></div>
             </div>
-            
+
             <div id="colorbutton"><i class="icon ion-ios-circle-filled"></i></div>
             <div class="panel-tool brush-tools" title="Brush Tools!"><i class="icon ion-ios-settings-strong"></i></div>
             <div class="panel-tool fullscreen" title="Full Screen!"><i class="icon ion-arrow-expand"></i></div>
-            <div class="panel-tool status-info" title="Status"><i class="icon ion-ios-information-outline"></i></div> 
+            <div class="panel-tool status-info" title="Status"><i class="icon ion-ios-information-outline"></i></div>
             <div id="offset-label" title="offset!">0,0</div>
         </script>
 
@@ -74,19 +74,9 @@
             <ul class="users"></ul>
             <h5>udraw by <a href="http://timatooth.com" target="_blank">Tim Sullivan</h5>
         </script>
-
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone-min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.7/socket.io.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pnotify/2.1.0/pnotify.core.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pnotify/2.1.0/pnotify.mobile.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/pnotify/2.1.0/pnotify.nonblock.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/spectrum/1.7.1/spectrum.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
-        <script type="text/javascript" src="/static/js/TileSource.js"></script>
-        <script type="text/javascript" src="/static/js/canvaspaint.js"></script>
+        <script type="text/javascript" src="/static/bundle.js"></script>
         <script>
+
 (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
     i[r] = i[r] || function () {
