Added FastClick back. CSS now bundled

--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
         <meta name="description" content="Draw in real time with others on an unlimited sized canvas">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
-        <link rel="stylesheet" href="/static/css/ionicons.css" media="all" />
-        <link rel="stylesheet" href="/static/css/font-awesome.css" media="all" />
-        <link rel="stylesheet" href="/static/css/spectrum.css" media="all" />
-        <link rel="stylesheet" href="/static/css/pnotify.brighttheme.css" media="all" />
-        <link rel="stylesheet" href="/static/css/style.css" media="all" />
+        <link rel="stylesheet" href="/static/css/bundle.css" media="all" />
         <link rel="apple-touch-icon" sizes="57x57" href="/static/images/favicons/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/static/images/favicons/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/static/images/favicons/apple-touch-icon-72x72.png">
