Removed webpack. Fastclick & spectrum no longer operating

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
             <ul class="users"></ul>
             <h5>udraw by <a href="http://timatooth.com" target="_blank">Tim Sullivan</h5>
         </script>
-        <script type="text/javascript" src="/static/bundle.js"></script>
+        <script type="text/javascript" src="/static/js/udraw.js"></script>
         <script>
 
 (function (i, s, o, g, r, a, m) {
