--- a/src/index.html
+++ b/src/index.html
@@ -15,27 +15,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <link rel="stylesheet" href="/static/css/bundle.css" media="all" />
-        <link rel="apple-touch-icon" sizes="57x57" href="/static/images/favicons/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="/static/images/favicons/apple-touch-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="/static/images/favicons/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="/static/images/favicons/apple-touch-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="/static/images/favicons/apple-touch-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="/static/images/favicons/apple-touch-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="/static/images/favicons/apple-touch-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="/static/images/favicons/apple-touch-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="/static/images/favicons/apple-touch-icon-180x180.png">
-        <link rel="icon" type="image/png" href="/static/images/favicons/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="/static/images/favicons/android-chrome-192x192.png" sizes="192x192">
-        <link rel="icon" type="image/png" href="/static/images/favicons/favicon-96x96.png" sizes="96x96">
-        <link rel="icon" type="image/png" href="/static/images/favicons/favicon-16x16.png" sizes="16x16">
-        <link rel="manifest" href="/static/images/favicons/manifest.json">
-        <link rel="shortcut icon" href="/static/images/favicons/favicon.ico">
         <meta name="apple-mobile-web-app-title" content="udraw.me">
         <meta name="application-name" content="udraw.me">
-        <meta name="msapplication-TileColor" content="#2b5797">
-        <meta name="msapplication-TileImage" content="/static/images/favicons/mstile-144x144.png">
-        <meta name="msapplication-config" content="/static/images/favicons/browserconfig.xml">
-        <meta name="theme-color" content="#ffffff">
     </head>
     <body>
         <div id="cursors"></div>
@@ -60,33 +41,18 @@
         </script>
 
         <script id="brush-tools-template" type="text/template">
-            <p>Size <input class="size-range" type="range" max="60" min="1" step="1" value="4" /></p>
-            <p>Opacity <input class="opacity-range" type="range" max="1" min="0.01" step="0.005" value="1.0" /></p>
+            <p><label for="size-slider">Size</label> <input id="size-slider" class="size-range" type="range" max="60" min="1" step="1" value="4" /></p>
+            <p><label for="opacity-slider">Opacity</label> <input id="opacity-slider" class="opacity-range" type="range" max="1" min="0.01" step="0.005" value="1.0" /></p>
         </script>
 
         <script id="status-template" type="text/template">
-            <p>Latency <span id="latency-label">∞<span></p>
+            <p>Latency <span id="latency-label">∞</span></p>
             <h4>Users</h4>
             <ul class="users"></ul>
-            <h5>udraw by <a href="http://timatooth.com" target="_blank">Tim Sullivan</h5>
+            <h5>udraw by <a href="http://timatooth.com" target="_blank">Tim Sullivan</a></h5>
         </script>
         <script type="text/javascript" src="/static/js/udraw.js"></script>
         <script>
-
-(function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-ga('create', 'UA-44811907-2', 'auto');
-ga('send', 'pageview');
         </script>
     </body>
 </html>
