back to webpack...

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <meta name="description" content="Draw in real time with others on an unlimited sized canvas">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
-        <link rel="stylesheet" href="/static/css/bundle.css" media="all" />
+        <link rel="stylesheet" href="/css/bundle.css" media="all" />
         <meta name="apple-mobile-web-app-title" content="udraw.me">
         <meta name="application-name" content="udraw.me">
     </head>
@@ -51,7 +51,7 @@
             <ul class="users"></ul>
             <h5>udraw by <a href="http://timatooth.com" target="_blank">Tim Sullivan</a></h5>
         </script>
-        <script type="text/javascript" src="/static/js/udraw.js"></script>
+        <script type="text/javascript" src="/assets/js/udraw-bundle.js"></script>
         <script>
         </script>
     </body>
