Reconfigured gulp and express static paths
Added gulp watch task for webpack-dev-server.

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
             <ul class="users"></ul>
             <h5>udraw by <a href="http://timatooth.com" target="_blank">Tim Sullivan</a></h5>
         </script>
-        <script type="text/javascript" src="/assets/js/udraw-bundle.js"></script>
+        <script type="text/javascript" src="/js/udraw-bundle.js"></script>
         <script>
         </script>
     </body>
