--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,6 @@
     <meta name="description" content="Draw in real time with others on an unlimited sized canvas">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="stylesheet" href="/css/vendor.css" media="all" />
     <meta name="apple-mobile-web-app-title" content="udraw.me">
     <meta name="application-name" content="udraw.me">
 </head>
@@ -22,6 +21,6 @@
 <div id="cursors"></div>
 <canvas id="paper" width="640" height="640"></canvas>
 <div id="udrawapp"></div><!--react ui -->
-<script type="text/javascript" src="/assets/js/udraw-bundle.js"></script>
+<script type="text/javascript" src="/js/udraw-bundle.js"></script>
 </body>
 </html>
