Now using Promises for TileSource
Currently very poor performance, Promise api performance issues

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,6 @@
 <div id="cursors"></div>
 <canvas id="paper" width="640" height="640"></canvas>
 <div id="udrawapp"></div><!--react ui -->
-<script type="text/javascript" src="/js/udraw-bundle.js"></script>
+<script type="text/javascript" src="js/udraw-bundle.js"></script>
 </body>
 </html>
